--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ERGO41 - Decentralized Cooperative DAO</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header Section -->
@@ -28,9 +29,9 @@
     <!-- Hero Section -->
     <section id="hero">
         <div class="container">
-            <h1>Welcome to ERGO41</h1>
-            <p>A decentralized cooperative platform built on blockchain for solidarity and fairness.</p>
-            <a href="#donate" class="btn">Donate Now</a>
+            <h1>Building a Decentralized World with ERGO41</h1>
+            <p>A platform to promote fairness, transparency, and social solidarity through blockchain technology.</p>
+            <a href="#donate" class="btn">Join the Movement</a>
         </div>
     </section>
 
@@ -38,28 +39,40 @@
     <section id="about">
         <div class="container">
             <h2>About ERGO41</h2>
-            <p>ERGO41 is a decentralized cooperative organization (DAO) that leverages blockchain technology to promote fairness, transparency, and social solidarity. Through donations, governance tokens, and smart contracts, we empower communities to distribute resources equitably.</p>
+            <p>ERGO41 is a decentralized cooperative DAO that empowers communities to equitably distribute resources. Using blockchain technology, we foster transparency, security, and fairness.</p>
         </div>
     </section>
 
     <!-- Benefits Section -->
     <section id="benefits">
         <div class="container">
-            <h2>Benefits of ERGO41</h2>
-            <ul>
-                <li>Decentralized and transparent governance</li>
-                <li>Privacy and security with blockchain technology</li>
-                <li>Equitable resource distribution</li>
-                <li>Participatory decision-making</li>
-            </ul>
+            <h2>Our Key Benefits</h2>
+            <div class="benefits-grid">
+                <div class="benefit-item">
+                    <h3>Decentralized Governance</h3>
+                    <p>Fair, transparent, and community-driven decision-making.</p>
+                </div>
+                <div class="benefit-item">
+                    <h3>Privacy & Security</h3>
+                    <p>Protected by cutting-edge blockchain and cryptography.</p>
+                </div>
+                <div class="benefit-item">
+                    <h3>Equal Opportunities</h3>
+                    <p>Creating a balanced, fair distribution of resources.</p>
+                </div>
+                <div class="benefit-item">
+                    <h3>Low Transaction Costs</h3>
+                    <p>Blockchain technology ensures minimal fees for our community.</p>
+                </div>
+            </div>
         </div>
     </section>
 
     <!-- Donate Section -->
     <section id="donate">
         <div class="container">
-            <h2>Donate to ERGO41</h2>
-            <p>Support our mission by donating Ergo tokens (ERG). Your contribution helps build a fair and decentralized economy for all.</p>
+            <h2>Support Our Mission</h2>
+            <p>Help build a decentralized and fair economy by donating Ergo tokens (ERG). Each contribution empowers individuals and small businesses.</p>
             <a href="#" class="btn">Donate ERG Now</a>
         </div>
     </section>
@@ -67,7 +80,7 @@
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
-            <h2>Contact ERGO41</h2>
+            <h2>Get in Touch with ERGO41</h2>
             <form action="#" method="post">
                 <label for="name">Your Name:</label>
                 <input type="text" id="name" name="name" required>
