--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ERGO41 - Decentralized Cooperative DAO</title>
+    <title>ERGO41 - Cooperativa Decentralizzata DAO</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header Section -->
+    <!-- Sezione Header -->
     <header id="header">
         <div class="container">
             <div class="logo">
@@ -17,81 +17,81 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#benefits">Benefits</a></li>
-                    <li><a href="#donate">Donate</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about">Chi Siamo</a></li>
+                    <li><a href="#benefits">Vantaggi</a></li>
+                    <li><a href="#donate">Dona</a></li>
+                    <li><a href="#contact">Contatti</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Hero Section -->
+    <!-- Sezione Hero -->
     <section id="hero">
         <div class="container">
-            <h1>Building a Decentralized World with ERGO41</h1>
-            <p>A platform to promote fairness, transparency, and social solidarity through blockchain technology.</p>
-            <a href="#donate" class="btn">Join the Movement</a>
+            <h1>Costruire un Mondo Decentralizzato con ERGO41</h1>
+            <p>Una piattaforma che promuove equità, trasparenza e solidarietà sociale grazie alla tecnologia blockchain.</p>
+            <a href="#donate" class="btn">Unisciti al Movimento</a>
         </div>
     </section>
 
-    <!-- About Section -->
+    <!-- Sezione Chi Siamo -->
     <section id="about">
         <div class="container">
-            <h2>About ERGO41</h2>
-            <p>ERGO41 is a decentralized cooperative DAO that empowers communities to equitably distribute resources. Using blockchain technology, we foster transparency, security, and fairness.</p>
+            <h2>Chi è ERGO41</h2>
+            <p>ERGO41 è una cooperativa decentralizzata DAO che permette alle comunità di distribuire equamente le risorse. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
         </div>
     </section>
 
-    <!-- Benefits Section -->
+    <!-- Sezione Vantaggi -->
     <section id="benefits">
         <div class="container">
-            <h2>Our Key Benefits</h2>
+            <h2>I Nostri Vantaggi Chiave</h2>
             <div class="benefits-grid">
                 <div class="benefit-item">
-                    <h3>Decentralized Governance</h3>
-                    <p>Fair, transparent, and community-driven decision-making.</p>
+                    <h3>Governance Decentralizzata</h3>
+                    <p>Decisioni eque, trasparenti e guidate dalla comunità.</p>
                 </div>
                 <div class="benefit-item">
-                    <h3>Privacy & Security</h3>
-                    <p>Protected by cutting-edge blockchain and cryptography.</p>
+                    <h3>Privacy e Sicurezza</h3>
+                    <p>Protetta dalla blockchain e dalla crittografia all'avanguardia.</p>
                 </div>
                 <div class="benefit-item">
-                    <h3>Equal Opportunities</h3>
-                    <p>Creating a balanced, fair distribution of resources.</p>
+                    <h3>Pari Opportunità</h3>
+                    <p>Creiamo una distribuzione bilanciata e equa delle risorse.</p>
                 </div>
                 <div class="benefit-item">
-                    <h3>Low Transaction Costs</h3>
-                    <p>Blockchain technology ensures minimal fees for our community.</p>
+                    <h3>Costi di Transazione Ridotti</h3>
+                    <p>La tecnologia blockchain garantisce commissioni minime per la nostra comunità.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Donate Section -->
+    <!-- Sezione Dona -->
     <section id="donate">
         <div class="container">
-            <h2>Support Our Mission</h2>
-            <p>Help build a decentralized and fair economy by donating Ergo tokens (ERG). Each contribution empowers individuals and small businesses.</p>
-            <a href="#" class="btn">Donate ERG Now</a>
+            <h2>Sostieni la Nostra Missione</h2>
+            <p>Aiuta a costruire un'economia decentralizzata ed equa donando token Ergo (ERG). Ogni contributo dà potere agli individui e alle piccole imprese.</p>
+            <a href="#" class="btn">Dona ERG Ora</a>
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- Sezione Contatti -->
     <section id="contact">
         <div class="container">
-            <h2>Get in Touch with ERGO41</h2>
+            <h2>Contatta ERGO41</h2>
             <form action="#" method="post">
-                <label for="name">Your Name:</label>
+                <label for="name">Il Tuo Nome:</label>
                 <input type="text" id="name" name="name" required>
 
-                <label for="email">Your Email:</label>
+                <label for="email">La Tua Email:</label>
                 <input type="email" id="email" name="email" required>
 
-                <label for="message">Your Message:</label>
+                <label for="message">Il Tuo Messaggio:</label>
                 <textarea id="message" name="message" required></textarea>
 
-                <button type="submit" class="btn">Send Message</button>
+                <button type="submit" class="btn">Invia Messaggio</button>
             </form>
         </div>
     </section>
@@ -99,7 +99,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 ERGO41. All Rights Reserved.</p>
+            <p>&copy; 2024 ERGO41. Tutti i Diritti Riservati.</p>
         </div>
     </footer>
 </body>
