--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ERGO41 - Cooperativa Decentralizzata DAO</title>
+    <title>ERGO4One - DAO</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -77,10 +77,14 @@
         </div>
     </section>
 
-    <!-- Sezione Contatti -->
-    <section id="contact">
-        <div class="container">
-            <h2>Contatta ERGO41</h2>
+   <!-- Sezione Contatti -->
+<section id="contact">
+    <div class="container">
+        <h2>Contatta ERGO41</h2>
+        <button id="expand-contact-btn" class="btn">Mostra il modulo di contatto</button>
+        
+        <!-- Container espandibile -->
+        <div id="contact-form-container" class="expandable-container">
             <form action="#" method="post">
                 <label for="name">Il Tuo Nome:</label>
                 <input type="text" id="name" name="name" required>
@@ -94,7 +98,20 @@
                 <button type="submit" class="btn">Invia Messaggio</button>
             </form>
         </div>
-    </section>
+    </div>
+</section>
+
+<!-- JavaScript per l'espansione -->
+<script>
+    const expandBtn = document.getElementById('expand-contact-btn');
+    const contactContainer = document.getElementById('contact-form-container');
+
+    expandBtn.addEventListener('click', () => {
+        contactContainer.classList.toggle('expanded');
+        expandBtn.textContent = contactContainer.classList.contains('expanded') ? 'Nascondi il modulo di contatto' : 'Mostra il modulo di contatto';
+    });
+</script>
+
 
     <!-- Footer -->
     <footer>
