--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Sezione Header -->
     <header id="header">
         <div class="container">
-            <div class="logo">
+            <a href="https://imgbb.com/"><img src="https://ergoplatform.org/en/" alt="ergo" border="0"></a>
                 <h1>ERGO41</h1>
             </div>
             <nav>
