--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Sezione Header -->
     <header id="header">
         <div class="container">
-            <a href="https://imgbb.com/"><img src="https://ergoplatform.org/en/" alt="ergo" border="0"></a>
+            <a href="https://imgbb.com/"><img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="ergo" border="0"></a>
                 <h1>ERGO41</h1>
             </div>
             <nav>
