--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ERGO4One - DAO</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>ERGO41 - DAO</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Collega il file CSS esterno -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!-- Font da Google Fonts -->
 </head>
 <body>
     <!-- Sezione Header -->
     <header id="header">
         <div class="container">
-            <a href="https://imgbb.com/"><img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="ergo" border="0"></a>
-                <h1>ERGO41</h1>
-            </div>
+            <!-- Logo dell'organizzazione -->
+            <a href="#"><img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="ergo" class="logo"></a>
+            <h1>ERGO41</h1> <!-- Titolo principale dell'header -->
             <nav>
                 <ul>
+                    <!-- Menu di navigazione -->
                     <li><a href="#about">Chi Siamo</a></li>
                     <li><a href="#benefits">Vantaggi</a></li>
                     <li><a href="#donate">Dona</a></li>
@@ -29,16 +30,16 @@
     <!-- Sezione Hero -->
     <section id="hero">
         <div class="container">
-            <h1>Costruire un Mondo Decentralizzato con ERGO41</h1>
+            <h1>Costruire un Mondo Decentralizzato con ERGO41</h1> <!-- Titolo principale -->
             <p>Una piattaforma che promuove equità, trasparenza e solidarietà sociale grazie alla tecnologia blockchain.</p>
-            <a href="#donate" class="btn">Unisciti al Movimento</a>
+            <a href="#donate" class="btn">Unisciti al Movimento</a> <!-- Pulsante per unirsi -->
         </div>
     </section>
 
     <!-- Sezione Chi Siamo -->
     <section id="about">
         <div class="container">
-            <h2>Chi è ERGO41</h2>
+            <h2>Chi è ERGO41</h2> <!-- Sottotitolo -->
             <p>ERGO41 è una cooperativa decentralizzata DAO che permette alle comunità di distribuire equamente le risorse. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
         </div>
     </section>
@@ -46,22 +47,22 @@
     <!-- Sezione Vantaggi -->
     <section id="benefits">
         <div class="container">
-            <h2>I Nostri Vantaggi Chiave</h2>
+            <h2>I Nostri Vantaggi Chiave</h2> <!-- Sottotitolo -->
             <div class="benefits-grid">
                 <div class="benefit-item">
-                    <h3>Governance Decentralizzata</h3>
+                    <h3>Governance Decentralizzata</h3> <!-- Vantaggio 1 -->
                     <p>Decisioni eque, trasparenti e guidate dalla comunità.</p>
                 </div>
                 <div class="benefit-item">
-                    <h3>Privacy e Sicurezza</h3>
+                    <h3>Privacy e Sicurezza</h3> <!-- Vantaggio 2 -->
                     <p>Protetta dalla blockchain e dalla crittografia all'avanguardia.</p>
                 </div>
                 <div class="benefit-item">
-                    <h3>Pari Opportunità</h3>
+                    <h3>Pari Opportunità</h3> <!-- Vantaggio 3 -->
                     <p>Creiamo una distribuzione bilanciata e equa delle risorse.</p>
                 </div>
                 <div class="benefit-item">
-                    <h3>Costi di Transazione Ridotti</h3>
+                    <h3>Costi di Transazione Ridotti</h3> <!-- Vantaggio 4 -->
                     <p>La tecnologia blockchain garantisce commissioni minime per la nostra comunità.</p>
                 </div>
             </div>
@@ -71,52 +72,52 @@
     <!-- Sezione Dona -->
     <section id="donate">
         <div class="container">
-            <h2>Sostieni la Nostra Missione</h2>
+            <h2>Sostieni la Nostra Missione</h2> <!-- Sottotitolo -->
             <p>Aiuta a costruire un'economia decentralizzata ed equa donando token Ergo (ERG). Ogni contributo dà potere agli individui e alle piccole imprese.</p>
-            <a href="#" class="btn">Dona ERG Ora</a>
+            <a href="#" class="btn">Dona ERG Ora</a> <!-- Pulsante per donare -->
         </div>
     </section>
 
    <!-- Sezione Contatti -->
-<section id="contact">
-    <div class="container">
-        <h2>Contatta ERGO41</h2>
-        <button id="expand-contact-btn" class="btn">Mostra il modulo di contatto</button>
-        
-        <!-- Container espandibile -->
-        <div id="contact-form-container" class="expandable-container">
-            <form action="#" method="post">
-                <label for="name">Il Tuo Nome:</label>
-                <input type="text" id="name" name="name" required>
+   <section id="contact">
+        <div class="container">
+            <h2>Contatta ERGO41</h2> <!-- Sottotitolo -->
+            <button id="expand-contact-btn" class="btn">Mostra il modulo di contatto</button> <!-- Pulsante per mostrare/nascondere il modulo -->
+            
+            <!-- Container espandibile per il modulo di contatto -->
+            <div id="contact-form-container" class="expandable-container">
+                <form action="#" method="post">
+                    <label for="name">Il Tuo Nome:</label>
+                    <input type="text" id="name" name="name" required> <!-- Campo per il nome -->
 
-                <label for="email">La Tua Email:</label>
-                <input type="email" id="email" name="email" required>
+                    <label for="email">La Tua Email:</label>
+                    <input type="email" id="email" name="email" required> <!-- Campo per l'email -->
 
-                <label for="message">Il Tuo Messaggio:</label>
-                <textarea id="message" name="message" required></textarea>
+                    <label for="message">Il Tuo Messaggio:</label>
+                    <textarea id="message" name="message" required></textarea> <!-- Campo per il messaggio -->
 
-                <button type="submit" class="btn">Invia Messaggio</button>
-            </form>
+                    <button type="submit" class="btn">Invia Messaggio</button> <!-- Pulsante per inviare il messaggio -->
+                </form>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
 
-<!-- JavaScript per l'espansione -->
-<script>
-    const expandBtn = document.getElementById('expand-contact-btn');
-    const contactContainer = document.getElementById('contact-form-container');
+    <!-- JavaScript per l'espansione del modulo di contatto -->
+    <script>
+        const expandBtn = document.getElementById('expand-contact-btn'); // Riferimento al pulsante di espansione
+        const contactContainer = document.getElementById('contact-form-container'); // Riferimento al contenitore del modulo
 
-    expandBtn.addEventListener('click', () => {
-        contactContainer.classList.toggle('expanded');
-        expandBtn.textContent = contactContainer.classList.contains('expanded') ? 'Nascondi il modulo di contatto' : 'Mostra il modulo di contatto';
-    });
-</script>
-
+        // Aggiunge un evento click al pulsante per mostrare/nascondere il modulo
+        expandBtn.addEventListener('click', () => {
+            contactContainer.classList.toggle('expanded'); // Alterna la classe 'expanded'
+            expandBtn.textContent = contactContainer.classList.contains('expanded') ? 'Nascondi il modulo di contatto' : 'Mostra il modulo di contatto'; // Cambia il testo del pulsante
+        });
+    </script>
 
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 ERGO41. Tutti i Diritti Riservati.</p>
+            <p>&copy; 2024 ERGO41. Tutti i Diritti Riservati.</p> <!-- Testo del footer -->
         </div>
     </footer>
 </body>
