--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ERGO41 - DAO</title>
+    <title>ERGO4ONE - DAO</title>
     <link rel="stylesheet" href="styles.css"> <!-- Collega il file CSS esterno -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!-- Font da Google Fonts -->
 </head>
@@ -39,7 +39,7 @@
     <!-- Sezione Chi Siamo -->
     <section id="about">
         <div class="container">
-            <h2>Chi è ERGO41</h2> <!-- Sottotitolo -->
+            <h2>Cosa è ERGO4ONE</h2> <!-- Sottotitolo -->
             <p>ERGO41 è una cooperativa decentralizzata DAO che permette alle comunità di distribuire equamente le risorse. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
         </div>
     </section>
