--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ERGO4ONE - DAO</title>
+    <title>ERGO41 - DAO</title>
     <link rel="stylesheet" href="styles.css"> <!-- Collega il file CSS esterno -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!-- Font da Google Fonts -->
 </head>
@@ -12,8 +12,10 @@
     <!-- Sezione Header -->
     <header id="header">
         <div class="container">
-            <!-- Logo dell'organizzazione -->
-            <a href="#"><img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="ergo" class="logo"></a>
+            <!-- Contenitore per il logo -->
+            <div class="logo-container"> <!-- Cornice tonda per il logo -->
+                <a href="#"><img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="ergo" class="logo"></a>
+            </div>
             <h1>ERGO41</h1> <!-- Titolo principale dell'header -->
             <nav>
                 <ul>
@@ -39,7 +41,7 @@
     <!-- Sezione Chi Siamo -->
     <section id="about">
         <div class="container">
-            <h2>Cosa è ERGO4ONE</h2> <!-- Sottotitolo -->
+            <h2>Cosa è ERGO41</h2> <!-- Sottotitolo -->
             <p>ERGO41 è una cooperativa decentralizzata DAO che permette alle comunità di distribuire equamente le risorse. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
         </div>
     </section>
