--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ERGO41 - DAO</title>
+    <title>ERGO4ONE - DAO</title>
     <link rel="stylesheet" href="styles.css"> <!-- Collega il file CSS esterno -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!-- Font da Google Fonts -->
 </head>
@@ -16,7 +16,7 @@
             <div class="logo-container"> <!-- Cornice tonda per il logo -->
                 <a href="#"><img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="ergo" class="logo"></a>
             </div>
-            <h1>ERGO41</h1> <!-- Titolo principale dell'header -->
+            <h1>MillionErg</h1> <!-- Titolo principale dell'header -->
             <nav>
                 <ul>
                     <!-- Menu di navigazione -->
@@ -32,7 +32,7 @@
     <!-- Sezione Hero -->
     <section id="hero">
         <div class="container">
-            <h1>Costruire un Mondo Decentralizzato con ERGO41</h1> <!-- Titolo principale -->
+            <h1>Costruire un Mondo Decentralizzato con ERGO4ONE</h1> <!-- Titolo principale -->
             <p>Una piattaforma che promuove equità, trasparenza e solidarietà sociale grazie alla tecnologia blockchain.</p>
             <a href="#donate" class="btn">Unisciti al Movimento</a> <!-- Pulsante per unirsi -->
         </div>
@@ -41,15 +41,15 @@
     <!-- Sezione Chi Siamo -->
     <section id="about">
         <div class="container">
-            <h2>Cosa è ERGO41</h2> <!-- Sottotitolo -->
-            <p>ERGO41 è una cooperativa decentralizzata DAO che permette alle comunità di distribuire equamente le risorse. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
+            <h2>Cosa è ERGO4ONE</h2> <!-- Sottotitolo -->
+            <p>ERGO4ONE è una DAO che permette alle comunità di distribuire equamente le risorse. Utilizzando la tecnologia blockchain, favoriamo trasparenza, sicurezza ed equità.</p>
         </div>
     </section>
 
     <!-- Sezione Vantaggi -->
     <section id="benefits">
         <div class="container">
-            <h2>I Nostri Vantaggi Chiave</h2> <!-- Sottotitolo -->
+            <h2>I Vantaggi Chiave</h2> <!-- Sottotitolo -->
             <div class="benefits-grid">
                 <div class="benefit-item">
                     <h3>Governance Decentralizzata</h3> <!-- Vantaggio 1 -->
@@ -83,7 +83,7 @@
    <!-- Sezione Contatti -->
    <section id="contact">
         <div class="container">
-            <h2>Contatta ERGO41</h2> <!-- Sottotitolo -->
+            <h2></h2>Contatta ERGO4ONE</h2> <!-- Sottotitolo -->
             <button id="expand-contact-btn" class="btn">Mostra il modulo di contatto</button> <!-- Pulsante per mostrare/nascondere il modulo -->
             
             <!-- Container espandibile per il modulo di contatto -->
@@ -119,7 +119,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 ERGO41. Tutti i Diritti Riservati.</p> <!-- Testo del footer -->
+            <p>&copy; 2024 ERGO4ONE. Tutti i Diritti Riservati.</p> <!-- Testo del footer -->
         </div>
     </footer>
 </body>
