--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="container">
             <!-- Contenitore per il logo -->
             <div class="logo-container"> <!-- Cornice tonda per il logo -->
+                 <a href="https://ergoplatform.org" target="_blank" rel="noopener noreferrer"> 
                 <a href="#"><img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="ergo" class="logo"></a>
             </div>
             <h1>MillionErg</h1> <!-- Titolo principale dell'header -->
