--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chi Siamo - ERGO41</title>
+    <title>Chi Siamo - ERGO4ONE</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
