--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chi Siamo - ERGO4ONE</title>
+    <title>Chi Siamo - ERGO41</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,11 +25,13 @@
             </nav>
         </div>
     </header>
-    
+
     <section>
         <div class="container">
-            <h2>Cosa è ERGO41</h2>
-            <p>ERGO41 è una cooperativa decentralizzata DAO...</p>
+            <h2>Chi Siamo</h2>
+            <p>ERGO41 è una cooperativa decentralizzata che offre una piattaforma per il cambiamento sociale attraverso la tecnologia blockchain. Siamo un gruppo di individui impegnati a costruire un futuro migliore, equo e accessibile a tutti.</p>
+            <h3>La Nostra Visione</h3>
+            <p>Immaginiamo un mondo dove le risorse siano distribuite equamente, senza intermediari. Siamo qui per facilitare questo cambiamento.</p>
         </div>
     </section>
 
