--- a/benefits.html
+++ b/benefits.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I Vantaggi - ERGO4ONE</title>
+    <title>Vantaggi - ERGO41</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,11 +25,28 @@
             </nav>
         </div>
     </header>
-    
+
     <section>
         <div class="container">
             <h2>I Nostri Vantaggi Chiave</h2>
-            <p>Descrizione dei vantaggi di ERGO41...</p>
+            <div class="benefits-grid">
+                <div class="benefit-item">
+                    <h3>Governance Decentralizzata</h3>
+                    <p>Le decisioni sono prese dai membri della comunità, assicurando che tutte le voci siano ascoltate e che ogni voto abbia importanza.</p>
+                </div>
+                <div class="benefit-item">
+                    <h3>Privacy e Sicurezza</h3>
+                    <p>Utilizziamo crittografia avanzata per proteggere i dati dei nostri utenti e garantire la privacy in tutte le transazioni.</p>
+                </div>
+                <div class="benefit-item">
+                    <h3>Accessibilità Globale</h3>
+                    <p>Chiunque, ovunque, può partecipare e beneficiare della nostra piattaforma, promuovendo una comunità veramente globale.</p>
+                </div>
+                <div class="benefit-item">
+                    <h3>Costi Ridotti</h3>
+                    <p>La nostra struttura riduce significativamente i costi delle transazioni, permettendo agli utenti di risparmiare denaro.</p>
+                </div>
+            </div>
         </div>
     </section>
 
