--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dona - ERGO4ONE</title>
+    <title>Dona - ERGO41</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,12 +25,14 @@
             </nav>
         </div>
     </header>
-    
+
     <section>
         <div class="container">
-            <h2>Sostieni la Nostra Missione</h2>
-            <p>Informazioni su come donare a ERGO41...</p>
-            <a href="#" class="btn">Dona ERG Ora</a>
+            <h2>Come Donare</h2>
+            <p>La tua donazione è fondamentale per il nostro progetto. Puoi donare direttamente token ERG utilizzando il tuo wallet.</p>
+            <h3>Indirizzo di Donazione</h3>
+            <p>Inserisci il tuo wallet qui: <strong>XXXXXXXXXXXXXXX</strong></p>
+            <p>Ogni contributo è apprezzato e farà una differenza!</p>
         </div>
     </section>
 
