--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contatti - ERGO4ONE</title>
+    <title>Contatti - ERGO41</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -25,11 +25,23 @@
             </nav>
         </div>
     </header>
-    
+
     <section>
         <div class="container">
-            <h2>Contatta ERGO41</h2>
-            <p>Informazioni per contattare ERGO41...</p>
+            <h2>Contattaci</h2>
+            <p>Hai domande? Vuoi saperne di più su ERGO41? Contattaci tramite il modulo qui sotto:</p>
+            <form action="#" method="post">
+                <label for="name">Il Tuo Nome:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">La Tua Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Il Tuo Messaggio:</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <button type="submit" class="btn">Invia Messaggio</button>
+            </form>
         </div>
     </section>
 
